--- a/style.css
+++ b/style.css
@@ -25,3 +25,11 @@ h1{
 section{
     height: 500px;
 }
+.link-button{
+    text-decoration: none;
+    color: white;
+    background-image: linear-gradient(90deg, lightsalmon, tomato);
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-weight: 700;
+}
