--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ font-family: 'Poppins', sans-serif;
 h1{
     font-size: 50px;
 }
+h2{
+    font-size: 40px;
+}
 .name-hilight{
     color: orange;
 }
@@ -32,4 +35,39 @@ section{
     padding: 10px 20px;
     border-radius: 5px;
     font-weight: 700;
+}
+.dream-section{
+    background-image: url("images/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
+    margin-top: 100px;
+}
+.single-experience{
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 5px;
+    padding: 10px;
+    height: 250px;
+    background-color: white;
+}
+.experience-area{
+    background-image: url("images/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position: left;
+    margin-top: 100px;
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, lightsalmon, tomato);
+    border-image-slice: 1;
+    
+}
+#baby-web{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, blue, cyan);
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
+    color: black;
+    font-size: 20px;
 }
